# CoreVocabularyDirectory

./: Dockerfile  Dockerfile.in  Makefile  Makefile.in  README.org  Vagrantfile  bootstrap.sh  configure.ac  logentries.conf  virtuoso.ini
excelfiles/: Core_Vocabularies_Mapping_Template.xlsx  Core_Vocabularies_v1.1_v0.31.xlsx  Core_Vocabularies_v1.2.xlsx  Core_Vocabularies_v1.3.xlsx  Core_Vocabularies_v1.4.xlsx  DCAT-AP-SDMX-Vocabularies_v0.2.xlsx  EuroVocmappings_v0.03-1.xlsx  MappingFromExcel.xlsx
system/: .gitignore  README.md  configure.sh  configure.sh.in  description.vsp  vhost_export.vspx.isql
system/data/: README.md  adms_v1.02.rdf  base.ttl  core-location.ttl  esens-activity-registration-schema.ttl  esens-activity-registration.ttl  regorg.ttl  ubl.ttl  vdm.ttl
system/scripts/: README.md  cvxsl2mdr.py  cvxsl2vdm.py  cvxsl2vdm.py.in  data.rdf  dcatxsl2mdr.py  edoc-xls2mdr.py  ubl-xsd2mdr.py
system/www/: description.vsp  description.vsp.in  index.html  index.html.in  mdr.owl  search.vsp  search.vsp.in
system/www/css/: screen.css
system/www/js/: main.js  main.js.in
system/www/visualisation/: all-dcat.links  all-sdmxdcatap.links  all.links  cvflare.json  cvtree.html  cvtree.html.in  dataquery-isPartOf.org.in  dataquery-ispartof.py  dataquery.org  (+9 more)
system/xslt/: about.xsl  about.xsl.in  include.xsl  include.xsl.in  namespaces.xml  search.xsl  search.xsl.in  sparql-table.xsl  sparql-table.xsl.in
tests/: Makefile.in  catalog.xml  test-mapping-data.xml  test-mapping.xsl
virtuoso-setup/: vhost_export.vspx.isql  vhost_export.vspx.isql.in  virtuoso.ini
