AC_INIT(vdm, 0.1, paul.massey@tenforce.com)
AC_PROG_AWK
AC_PROG_GREP
AC_CHECK_PROG(PYTHON, [python],[/usr/bin/python])
AC_CHECK_PROG(PYTHON3, [python3],[/usr/bin/python3])
AC_CHECK_PROG(DOCKER, [docker],[/usr/bin/docker])
AC_CHECK_PROG(TAR, [tar],[/bin/tar])
AC_CHECK_PROG(SORT, [sort],[/usr/bin/sort])
AC_CHECK_PROG(AWK, [awk],[/usr/bin/awk])
AC_CHECK_PROG(TR, [tr],[/usr/bin/tr])
AC_CHECK_PROG(ROQET, [roqet],[/usr/bin/roqet])
AC_CHECK_PROG(EMACS, [emacs],[/usr/bin/emacs])
AC_CHECK_PROG(XSLTPROC, [xsltproc],[/usr/bin/xsltproc])
AC_CONFIG_FILES([Makefile tests/Makefile])
AC_OUTPUT
